--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,6 @@
 <h1><%=@user.profile.fullname%> Profile.</h1>
 
-<div>Nav bar</div>
-<button>Show Profile</button>
-<button>Show friends</button>
-<button>Notifications</button>
+<%= render 'navbar'%>
 
 <h3>User wall:</h3>
 
