--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Posts#index</h1>
-<p>Find me in app/views/posts/index.html.erb</p>
+<%=render 'users/navbar'%>
+
+<h1>Time-Line</h1>
+<h3><%="Welcome back #{current_user.username}!"%></h3>
+
+
