log 6.35, Working on how to create the post comments from inside the posts. 1) NavBar done, 2) Done with the create, show and edit profile from the user profile, 3) done with write on the wall and edit the post, pending: create comments from the posts, friends, user index, notifications and messages

--- a/app/views/users/_profiletools.html.erb
+++ b/app/views/users/_profiletools.html.erb
@@ -6,7 +6,7 @@
 <%end%>
 <button><%= link_to 'show_friends', data:{turbo_frame: 'show_friends'}%></button>
 <button><%= link_to 'Notifications', data:{turbo_frame: 'notifications'}%></button>
-<button><%= link_to 'Write on Your wall!', data:{turbo_frame: 'create_post'}%></button>
+<button><%= link_to 'Write on Your wall!', new_post_path, data:{turbo_frame: 'create_post'}%></button>
 <button><%= link_to 'Messages', data:{turbo_frame: 'messages'}%></button>
 
 
