--- a/app/views/users/_userposts.html.erb
+++ b/app/views/users/_userposts.html.erb
@@ -1,15 +1,18 @@
-
+<%@posts=current_user.posts%>
 <div>
 <%unless @posts.nil?%>
 <%@posts.each do |post|%>
 
 <div>
+<ul></ul>
 <p><%=post.user.username%></p>
-<p><%=post.title%></p> <br>
+<p>Title: <%=link_to post.title, post_path%></p> <br>
 <p><%=post.body%></p>
-<div><button><%=post.likes%></button></div>
-<div>Comments here</div>
+<div><button><%='Likes!'%></button></div>
+<button><%=link_to "edit post", edit_post_path, data:{turbo_frame:'edit_post'}%></button>
+
 </div>
+
 
 <%end%>
 <%end%>
