--- a/app/views/profiles/_userprofile.html.erb
+++ b/app/views/profiles/_userprofile.html.erb
@@ -1,4 +1,5 @@
 
+
 <%@profile=current_user.profile%>
 <%unless @profile.nil?%>
 <div>
@@ -11,6 +12,8 @@
 <li><h5><%=@profile.school%></h5></li> <br>
 <li><h5><%=@profile.favorite_dessert%></h5></li> <br>
 </div>
-
+<button><%=link_to "Edit Profile", edit_profile_path, data:{turbo_frame:'edit_profile'}%></button>
 <%end%>
 
+<%= turbo_frame_tag 'edit_profile' do %>
+<%end%>
