debbuging the form to create comments in the post

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,10 @@
 
 <%=render 'show_post'%>
 
+<%=render 'comments/form', post: @post%>
+
+<%if !@comments.empty?%>
+<%=render 'indexs/form', comments: @comments%>
+<%else%>
+<%='No comments...yet...'%>
+<%end%>
