--- a/app/views/comments/_indexs.html.erb
+++ b/app/views/comments/_indexs.html.erb
@@ -1,7 +1,7 @@
 <h4>Comments:</h4>
 <%unless comments.nil?%>
 <%=comments.each do |c|%>
-<%=User.where(id:c.user_id)%>
+<%=User.find(c.user_id).username%>
 <%=c.body%>
 <%end%>
 <%end%>
