--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,10 +1,11 @@
 
 <%=render 'show_post'%>
 
+
 <%=render 'comments/form', post: @post%>
 
 <%if !@comments.empty?%>
-<%=render 'indexs/form', comments: @comments%>
+<%=render 'comments/indexs', comments: @comments%>
 <%else%>
 <%='No comments...yet...'%>
 <%end%>
