--- a/app/views/users/_profiletools.html.erb
+++ b/app/views/users/_profiletools.html.erb
@@ -5,7 +5,7 @@
 <button><%= link_to 'Show Profile',profile_path, data:{turbo_frame: 'show_profile'}%></button>
 <%end%>
 <button><%= link_to 'show_friends', data:{turbo_frame: 'show_friends'}%></button>
-<button><%= link_to 'Notifications', data:{turbo_frame: 'notifications'}%></button>
+<button><%= link_to 'Notifications', friendships_url, data:{turbo_frame: 'notifications'}%></button>
 <button><%= link_to 'Write on Your wall!', new_post_path, data:{turbo_frame: 'create_post'}%></button>
 <button><%= link_to 'Messages', data:{turbo_frame: 'messages'}%></button>
 
