log 7.5 update friendship status from a form, showing friends list of user, its pending the part of NOT showing people that already is your friend

--- a/app/views/users/_profiletools.html.erb
+++ b/app/views/users/_profiletools.html.erb
@@ -1,31 +1,16 @@
 
-<%if current_user.profile.nil?%>
+<%if @user.profile.nil?%>
 <button><%= link_to 'Create Profile',new_profile_path, data:{turbo_frame: 'create_profile'}%></button>
 <%else%>
 <button><%= link_to 'Show Profile',profile_path, data:{turbo_frame: 'show_profile'}%></button>
 <%end%>
-<button><%= link_to 'show_friends', data:{turbo_frame: 'show_friends'}%></button>
+
+<button><%= link_to 'show_friends', user_friends_url(@user.id), data:{turbo_frame: 'show_friends'}%></button>
+<%if current_user.id == @user.id%>
 <button><%= link_to 'Notifications', friendships_url, data:{turbo_frame: 'notifications'}%></button>
 <button><%= link_to 'Write on Your wall!', new_post_path, data:{turbo_frame: 'create_post'}%></button>
 <button><%= link_to 'Messages', data:{turbo_frame: 'messages'}%></button>
-
+<%end%>
 
 </div>
 
-<%= turbo_frame_tag 'create_profile' do %>
-<%end%>
-
-<%= turbo_frame_tag 'create_post' do %>
-<%end%>
-
-<%= turbo_frame_tag 'show_profile' do %>
-<%end%>
-
-<%= turbo_frame_tag 'show_friends' do %>
-<%end%>
-
-<%= turbo_frame_tag 'notifications' do %>
-<%end%>
-
-<%= turbo_frame_tag 'messages' do %>
-<%end%>
