--- a/app/views/users/_index2.html.erb
+++ b/app/views/users/_index2.html.erb
@@ -6,6 +6,8 @@
     <p><%=x.profile.full_name%></p>
     <p><%=x.profile.city%></p>
     <p><%=x.profile.favorite_dessert%></p>
+        <button><%=link_to "#{x.profile.full_name}'s profile", x%></button>
+
     <%=render 'friendrequest', x: x%>
 </div>
 <%end%>
