--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,6 +6,30 @@
 
 <%= render 'profiletools'%>
 
+<%= turbo_frame_tag 'create_profile' do %>
+<%end%>
+
+<%= turbo_frame_tag 'create_post' do %>
+<%end%>
+
+<%= turbo_frame_tag 'show_profile' do %>
+<%end%>
+
+<%= turbo_frame_tag 'show_friends' do %>
+<%end%>
+
+<%= turbo_frame_tag 'notifications' do %>
+<%end%>
+
+<%= turbo_frame_tag 'messages' do %>
+<%end%>
+
+
 <h3>User wall:</h3>
 
 <%=render 'userposts'%>
+
+
+
+
+
