log 7.6 users do not show request options when they are already friends, going for likes and messages

--- a/app/views/friendships/_notifications.html.erb
+++ b/app/views/friendships/_notifications.html.erb
@@ -1,3 +1,5 @@
+<h4><%='There are no pending requests' if @pending.empty?%></h4>
+
 <%unless @pending.empty?%>
 <%@pending.each do |fp|%>
 <h3><strong>Friend request by:</strong></h3>
