--- a/app/views/posts/_friendsposts.html.erb
+++ b/app/views/posts/_friendsposts.html.erb
@@ -1,6 +1,7 @@
-<%@mapped_posts.each do |mp|%>
+<%@mapped_post= @mapped_posts + @owned%>
+<%@mapped_post.each do |mp|%>
 <div>
-<p>tutle: </p><%=mp.title%>
+<p>Title: </p><%=mp.title%>
 <p> Author: </p><strong><%=User.find(mp.user_id).profile.full_name%></strong> <br>
 <%=mp.body%> <br>
 <p>Write a comment:</p><%=render 'comments/form', post: mp%> <br>
