--- a/app/views/users/friends.html.erb
+++ b/app/views/users/friends.html.erb
@@ -2,3 +2,10 @@
 
 <%=render 'user_friends'%>
 <%end%>
+
+
+<%=turbo_frame_tag 'close_frame' do%>
+<div></div>
+<%end%>
+
+<%=button_to 'close', user_friends_path, data:{turbo_frame:'close_frame'} %>
