having troubles with turbo stream..., no idea why

--- a/app/views/messages/_send_message.html.erb
+++ b/app/views/messages/_send_message.html.erb
@@ -2,7 +2,9 @@
 <h3><%="Send a Message"%></h3>
 <%=form_with model: [@room,@message] do |f|%>
 <%=f.hidden_field :user_id,value: current_user.id%>
+<%=f.hidden_field :sender_name, value: current_user.username%>
 <%=f.hidden_field :receiver_id, value:receiver%>
+<%=f.hidden_field :receiver_name, value: User.find(receiver).username %>
 <%=f.hidden_field :room_id, value: room.id%>
 <%=f.text_field :body%>
 <%=f.submit "Send"%>
