working on turbo stream stuff

--- a/app/views/messages/create.turbo_stream.erb
+++ b/app/views/messages/create.turbo_stream.erb
@@ -1,3 +1,5 @@
+#this does not work yet
+
 <%=turbo_stream.append "update_messages" do%>
   <%= render partial: 'rooms/message', formats: [:html] %>
 <% end %>
