closing frames done

--- a/app/views/friendships/_notifications.html.erb
+++ b/app/views/friendships/_notifications.html.erb
@@ -16,3 +16,5 @@
 <%=button_to 'Reject', friendship_path(fp),data: {turbo_method: :delete,turbo_confirm: 'Are you sure?'}%>
 <%end%>
 <%end%>
+
+<%= link_to "Close Notifications", user_path(current_user), class: "btn btn--light" %>
