--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,20 +6,15 @@
 <%= render 'profiletools' %>
 
 
-<%= turbo_frame_tag 'create_profile' do %>
-<%end%>
+<%= turbo_frame_tag 'create_profile'  %>
 
-<%= turbo_frame_tag 'create_post' do %>
-<%end%>
+<%= turbo_frame_tag 'create_post'  %>
 
-<%= turbo_frame_tag 'show_profile' do %>
-<%end%>
+<%= turbo_frame_tag 'show_profile'  %>
 
-<%= turbo_frame_tag 'show_friends' do %>
-<%end%>
+<%= turbo_frame_tag 'show_friends'  %>
 
-<%= turbo_frame_tag 'notifications' do %>
-<%end%>
+<%= turbo_frame_tag 'notifications'  %>
 
 <h3>User wall:</h3>
 
