--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,8 +1,9 @@
 <p>Messages between: <%=User.find(@room.user_id).username%> & <%=User.find(@room.receiver_id).username%></p>
 
 
-<%=render 'message', messages: @messages%>
+<%=turbo_frame_tag 'lol',loading: 'lazy' do%>
+<%=render @messages%>
+<%end%>
 
 <%= render 'messages/send_message', room: @room%>
-
 
