--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,7 +1,6 @@
 
-<%if !message.sender_name.nil?%>
-<strong><%=message.sender_name+":"%></strong> <%=message.body%> <br>
-<%else%>
-<%="#{message.user_id}:"%> <%=message.body%> <br>
-<%end%>
-
+<div>
+<strong><%=message.sender_name+":"%></strong>
+<%dom_id(message)%>
+ <p> <%=message.body%> </p> <br>
+</div>
