--- a/app/views/messages/_send_message.html.erb
+++ b/app/views/messages/_send_message.html.erb
@@ -1,6 +1,7 @@
 <%receiver= current_user.id==room.user_id ? room.receiver_id : room.user_id%>
 <h3><%="Send a Message"%></h3>
-<%=form_with model: [@room,@message] do |f|%>
+<%=form_with model: [@room,@message],
+ data:{controller:"reset-form", action:"turbo:submit-end->reset-form#reset"} do |f|%>
 <%=f.hidden_field :user_id,value: current_user.id%>
 <%=f.hidden_field :sender_name, value: current_user.username%>
 <%=f.hidden_field :receiver_id, value:receiver%>
