--- a/app/views/messages/create.turbo_stream.erb
+++ b/app/views/messages/create.turbo_stream.erb
@@ -1,1 +1,1 @@
-<%=turbo_stream.append "lol", partial: "messages/message", locals:{message: @message}%>
+<%turbo_stream.append "lol", partial: "messages/message", locals:{message: @message}%>
